[build-system]
  requires = ["setuptools>=68.0"]
  build-backend = "setuptools.build_meta"

[project]
  name = "GMXvg"
  description = "A tool to plot GROMACS .xvg files."
  version = "0.4.6"
  authors = [
    { name="Vishal Kumar Sahu", email="mail@vishalkumarsahu.in" },
  ]
  readme = "README.md"
  requires-python = ">=3.8"
  classifiers = [
    'Operating System :: OS Independent',
    'Intended Audience :: Science/Research',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10'
  ]
  dependencies = [
    'UtilityLib',
    'pandas',
    'matplotlib',
    'latex',
  ]

[project.scripts]
  gmxvg = "gmxvg:xvgplot"

[project.urls]
  Homepage = "https://github.com/TheBiomics/GMXvg"
  Issues = "https://github.com/TheBiomics/GMXvg/issues"
